<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2024 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/turbo_charge_title">

    <PreferenceCategory
        android:key="tc_basic_category"
        android:title="@string/tc_category_basic">

        <com.android.settingslib.widget.MainSwitchPreference
            android:key="turbo_enable"
            android:title="@string/turbo_enable_title"
            android:summary="@string/turbo_enable_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="sports_mode"
            android:title="@string/sports_mode_title"
            android:summary="@string/sports_mode_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="turbo_current"
            android:title="@string/turbo_current_title"
            android:entries="@array/turbo_modes_entries"
            android:entryValues="@array/turbo_modes_values"
            android:defaultValue="9000000"
            android:summary="%s" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="tc_schedule_category"
        android:title="@string/tc_category_schedule">

        <androidx.preference.SwitchPreferenceCompat
            android:key="tc_adaptive_charging"
            android:title="@string/tc_adaptive_charging_title"
            android:summary="@string/tc_adaptive_charging_summary"
            android:defaultValue="true" />

        <org.lineageos.settings.CustomSeekBarPreference
            android:key="tc_start_time"
            android:title="@string/tc_start_time_title"
            android:max="23"
            android:min="0"
            settings:units=":00"
            android:defaultValue="22" />

        <org.lineageos.settings.CustomSeekBarPreference
            android:key="tc_end_time"
            android:title="@string/tc_end_time_title"
            android:max="23"
            android:min="0"
            settings:units=":00"
            android:defaultValue="6" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="tc_protection_category"
        android:title="@string/tc_category_protection">

        <androidx.preference.SwitchPreferenceCompat
            android:key="tc_bypass_charging"
            android:title="@string/tc_bypass_charging_title"
            android:summary="@string/tc_bypass_charging_summary"
            android:defaultValue="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="tc_temp_protection"
            android:title="@string/tc_temp_protection_title"
            android:summary="@string/tc_temp_protection_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="tc_night_charge"
            android:title="@string/tc_night_charge_title"
            android:summary="@string/tc_night_charge_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="tc_battery_protection"
            android:title="@string/tc_battery_protection_title"
            android:summary="@string/tc_battery_protection_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="tc_charge_limit"
            android:title="@string/tc_charge_limit_title"
            android:summary="@string/tc_charge_limit_summary"
            android:entries="@array/tc_charge_limit_entries"
            android:entryValues="@array/tc_charge_limit_values"
            android:defaultValue="100" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="tc_advanced_category"
        android:title="@string/tc_category_advanced">

        <ListPreference
            android:key="tc_usb_pd"
            android:title="@string/tc_usb_pd_title"
            android:summary="@string/tc_usb_pd_summary"
            android:entries="@array/tc_usb_pd_entries"
            android:entryValues="@array/tc_usb_pd_values"
            android:defaultValue="auto" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="tc_quick_charge"
            android:title="@string/tc_quick_charge_title"
            android:summary="@string/tc_quick_charge_summary"
            android:defaultValue="true" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="tc_charge_monitor"
            android:title="@string/tc_charge_monitor_title"
            android:summary="@string/tc_charge_monitor_summary"
            android:defaultValue="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="tc_real_time_current"
            android:title="@string/tc_real_time_current_title"
            android:summary="@string/tc_real_time_current_summary"
            android:defaultValue="false" />

        <Preference
            android:key="tc_charge_cycles"
            android:title="@string/tc_charge_cycles_title"
            android:summary="@string/tc_charge_cycles_summary" />

    </PreferenceCategory>

    <Preference
        android:key="tc_reset"
        android:title="@string/tc_reset_title"
        android:summary="@string/tc_reset_summary" />

</PreferenceScreen>
